[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repseq"
version = "0.1.0"
description = "Python toolbox for bulk immune repertoire (TCR/BCR) sequencing analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  # or SPDX identifier, e.g. "Apache-2.0"
authors = [
  { name = "Mikhail Myshkin", email = "mikhailmyshkin.ibch@gmail.com" },
]
keywords = [
  "immunology",
  "repertoire",
  "TCR",
  "BCR",
  "immune",
  "bioinformatics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Runtime dependencies
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "rpy2",
  "statsmodels",
  "networkx",
  "dill",
  "pyyaml",
  "json",
  "logomaker",
  "bioconda::olga",
  "leidenalg",
  "igraph", 
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/mmjmike/repseq"
Repository = "https://github.com/mmjmike/repseq"
Documentation = "https://mmjmike.github.io/repseq"
Issues = "https://github.com/mmjmike/repseq/issues"

# Tell setuptools where your packages live (src layout)
[tool.setuptools.packages.find]
where = ["repseq"]

# If you have non-Python data files inside packages, configure this:
# [tool.setuptools.package-data]
# "repseq" = ["data/*.tsv", "data/*.json"]

# pytest configuration (so you don't need a separate pytest.ini)
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers"
testpaths = [
  "tests",
]