[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repseq"
version = "0.1.0"
description = "Python toolbox for bulk immune repertoire (TCR/BCR) sequencing analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "Mikhail Myshkin", email = "mikhailmyshkin.ibch@gmail.com" },
]
keywords = [
  "immunology",
  "repertoire",
  "TCR",
  "BCR",
  "immune",
  "bioinformatics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "statsmodels",
  "networkx",
  "dill",
  "PyYAML",
  "requests",
]

[project.optional-dependencies]
clustering = [
  "igraph",
  "leidenalg",
  "logomaker",
]
pgen = [
  "olga",
]
r = [
  "rpy2",
]
tcrdist = [
  "tcrdist3",
]
dev = [
  "build",
  "twine",
  "check-manifest",
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/mmjmike/repseq"
Repository = "https://github.com/mmjmike/repseq"
Documentation = "https://mmjmike.github.io/repseq"
Issues = "https://github.com/mmjmike/repseq/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["repseq*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
repseq = [
  "tcrdist_ab_v_segments.json",
  "resourses/*.txt",
]

# pytest configuration (so you don't need a separate pytest.ini)
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers"
testpaths = [
  "tests",
]
